--- a/index.html
+++ b/index.html
@@ -72,21 +72,31 @@ excel_file.addEventListener('change', (event) => {
         var table = document.getElementById("myTable");
         var rowCount = table.rows.length;
         var colCount = table.rows[0].cells.length;
-        for(var n=0; n<5;n++){
+        for(var n=0; n<10;n++){
         for (var i = 0; i < rowCount; i++) {
             var newCell = table.rows[i].insertCell(colCount);
         }}
         var rowIndex = 0;
-        var colIndex_ex = 4;
-        var colIndex_to = 5;
-        var colIndex_mi = 6;
-        var colIndex_ma = 7;
-        var colIndex_co = 8;
-        table.rows[rowIndex].cells[colIndex_ma].innerHTML="<b>MAX.</b>"
+        var colIndex_ppw = 4;
+        var colIndex_weight = 5;
+        var colIndex_ex = 6;
+        var colIndex_exw = 7;
+        var colIndex_to = 8;
+        var colIndex_tow = 9;
+        var colIndex_rem = 10;
+        var colIndex_mi = 11;
+        var colIndex_ma = 12;
+        var colIndex_co = 13; 
+         table.rows[rowIndex].cells[colIndex_ma].innerHTML="<b>MAX.</b>"
         table.rows[rowIndex].cells[colIndex_mi].innerHTML="<b>MIN.</b>"
         table.rows[rowIndex].cells[colIndex_co].innerHTML="<b>COMBO.</b>"
-        table.rows[rowIndex].cells[colIndex_ex].innerHTML="<b>EXTRA.</b>"
-        table.rows[rowIndex].cells[colIndex_to].innerHTML="<b>TOTAL.</b>"
+        table.rows[rowIndex].cells[colIndex_ex].innerHTML="<b>EXTRA.</b>" 
+        table.rows[rowIndex].cells[colIndex_ppw].innerHTML="<b>PPW</b>"
+         table.rows[rowIndex].cells[colIndex_weight].innerHTML="<b>WEIGHT</b>"
+        table.rows[rowIndex].cells[colIndex_exw].innerHTML="<b>EXTRA WEIGHT</b>"
+        table.rows[rowIndex].cells[colIndex_to].innerHTML="<b>TOTAL \n (+suggestion)</b>"
+        table.rows[rowIndex].cells[colIndex_tow].innerHTML="<b>TOTAL WEIGHT</b>"
+        table.rows[rowIndex].cells[colIndex_rem].innerHTML="<b>REMARK </b>" 
     }
     document.getElementById("G_R").style.display = "block";
     document.getElementById("erase").style.display = "block";
@@ -101,7 +111,7 @@ excel_file.addEventListener('change', (event) => {
         lastCol = tbl.rows[0].cells.length - 1,   
         i, j;
         for (i = 0; i < tbl.rows.length; i++) {
-        for (j = lastCol; j > 7; j--) {
+        for (j = lastCol; j > 12; j--) {
             tbl.rows[i].deleteCell(j);
         }}
 var downloadLink;
