--- a/index.html
+++ b/index.html
@@ -20,7 +20,10 @@
     	<div class="card">
     		<div class="card-header"><b>Select Excel File</b></div>
     		<div class="card-body" style="text-align:center;">
+                <form method="get" action="./Template.xlsx">
                 <input type="file" id="excel_file" />
+                <button type="submit">Templeate Download</button>
+                 </form>
     		</div>
     	</div>
         <div id="excel_data" class="mt-5"></div>
