--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     		<div class="card-body" style="text-align:center;">
                 <form method="get" action="./Template.xlsx">
                 <input type="file" id="excel_file" />
-                <button type="submit">Templeate Download</button>
+                <button type="submit">Template Download</button>
                  </form>
     		</div>
     	</div>
