--- a/index.html
+++ b/index.html
@@ -30,6 +30,16 @@
 <body>
     <div class="container">
     	<h2 class="text-center mt-4 mb-4">Best Combo</h2>
+        <p>
+        INFO:
+            <ul>
+                <li>All values will be in mm only.</li>
+                <li>Do not change the colums of the template.</li>
+                <li>Copy paste the desired table in the second row.</li>
+                <li>If in case it does not work, download the template again and retry.</li>
+                <li>The downloaded file may give a security warning, please overlook it.</li>
+            </ul>
+        </p>
     	<div class="card">
     		<div class="card-header"><b>Select Excel File</b></div>
     		<div class="card-body" style="text-align:center;">
