--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8" />
-    <title>Best Possible Combination</title>
+    <title>MOQ</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <style type="text/css">
@@ -31,7 +31,7 @@
 </head>
 <body>
     <div class="container">
-        <h1 class="text-center mt-4 mb-4">Best Combo</h1>
+        <h1 class="text-center mt-4 mb-4">Minimum Order Quantity</h1>
         <h3>
         <h3><b>INFO:</b></h3>            
         <ul style="font-size: 17px;">
