--- a/master.html
+++ b/master.html
@@ -21,21 +21,32 @@
       const formData = new FormData();
       formData.append('gradeFile', file);
 
+      const axios = require('axios');
+
+      exports.handler = async (event) => {
       try {
-        const response = await fetch('/.netlify/functions/upload', {
-          method: 'POST',
-          body: formData, 
-        });
-        const result = await response.json();
-        if (response.ok) {
-          alert('File uploaded successfully: ' + result.message);
-        } else {
-          throw new Error(result.message || 'Unknown error');
-        }
-      } catch (error) {
-        alert('File upload failed: ' + error.message);
-      }
-    });
+      // Get the file data from the event
+      const fileData = event.body;
+
+      // Make a request to the GitHub API to create a new file
+      const response = await axios.put('https://api.github.com/repos/Tanish431/final_combo/contents/', {
+        message: 'Upload file',
+        content: fileData,
+      });
+
+      // Return a success response
+      return {
+        statusCode: 200,
+        body: JSON.stringify({ message: 'File uploaded successfully', data: response.data }),
+      };
+    } catch (error) {
+      console.error(error);
+      return {
+        statusCode: 500,
+        body: JSON.stringify({ message: 'File upload failed', error: error.message }),
+      };
+    }};
+  });
   </script>
 </body>
 </html>
