--- a/master.html
+++ b/master.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.7.7/axios.min.js" integrity="sha512-DdX/YwF5e41Ok+AI81HI8f5/5UsoxCVT9GKYZRIzpLxb8Twz4ZwPPX+jQMwMhNQ9b5+zDEefc+dcvQoPWGNZ3g==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
   <title>Upload Excel File</title>
 </head>
 <body>
@@ -20,8 +21,6 @@
       const file = document.getElementById('gradeFile').files[0];
       const formData = new FormData();
       formData.append('gradeFile', file);
-
-      const axios = require('axios');
 
       exports.handler = async (event) => {
       try {
