--- a/master.html
+++ b/master.html
@@ -14,39 +14,12 @@
     <button type="submit">Upload</button>
   </form>
   <script>
-    document.getElementById('uploadForm').addEventListener('submit', async (e) => {
-      e.preventDefault();
-      
-      const file = document.getElementById('gradeFile').files[0];
-      const formData = new FormData();
-      formData.append('gradeFile', file);
-
-      const axios = require('axios');
-
-      exports.handler = async (event) => {
-      try {
-      // Get the file data from the event
-      const fileData = event.body;
-
-      // Make a request to the GitHub API to create a new file
-      const response = await axios.put('https://api.github.com/repos/Tanish431/final_combo/contents/', {
-        message: 'Upload file',
-        content: fileData,
-      });
-
-      // Return a success response
-      return {
-        statusCode: 200,
-        body: JSON.stringify({ message: 'File uploaded successfully', data: response.data }),
-      };
-    } catch (error) {
-      console.error(error);
-      return {
-        statusCode: 500,
-        body: JSON.stringify({ message: 'File upload failed', error: error.message }),
-      };
-    }};
-  });
+   fetch('/.netlify/functions/updateFile', {
+        method: 'POST'
+      })
+  .then(response => response.json())
+  .then(data => console.log(data))
+  .catch(error => console.error('Error:', error));
   </script>
 </body>
 </html>
